@@ -1,3 +1,11 @@
+2005-01-08  Philippe Gerum  <rpm@xenomai.org>
+
+	* skins/rtai: Use DECLARE_XNQUEUE() where applicable.
+
+	* skins/rtai/intr.c (__intr_trampoline): Allow for immediate ISR
+	processing from kernel space only, in addition to the task-based
+	DSR mode available both in kernel and user-space contexts.
+
 2005-01-05  Philippe Gerum  <rpm@xenomai.org>
 
 	* skins/rtai/sem.c (rt_sem_v): Add pulse mode.
